[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/SceneScripts/Hub.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/LargerFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Icons/icons8-home-80.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/icons8-installing-updates-80.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/icons8-settings-80.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Settings.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Installs.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Home.gd" type="Script" id=8]

[node name="Hub" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
margin_left = 50.0
margin_right = 795.0
margin_bottom = 495.0
color = Color( 0.313726, 0.745098, 0.705882, 1 )

[node name="NavBarBg" type="ColorRect" parent="."]
margin_right = 50.0
margin_bottom = 495.0
color = Color( 0.313726, 0.745098, 0.705882, 0.85098 )

[node name="Home" type="TextureButton" parent="NavBarBg"]
margin_right = 50.0
margin_bottom = 50.0

[node name="Sprite" type="Sprite" parent="NavBarBg/Home"]
position = Vector2( 25, 25 )
texture = ExtResource( 3 )

[node name="Installs" type="TextureButton" parent="NavBarBg"]
margin_top = 50.0
margin_right = 50.0
margin_bottom = 100.0

[node name="Sprite" type="Sprite" parent="NavBarBg/Installs"]
position = Vector2( 25, 25 )
texture = ExtResource( 4 )

[node name="Settings" type="TextureButton" parent="NavBarBg"]
margin_top = 445.0
margin_right = 50.0
margin_bottom = 495.0

[node name="Sprite" type="Sprite" parent="NavBarBg/Settings"]
position = Vector2( 25, 25 )
texture = ExtResource( 5 )

[node name="Home" type="Node2D" parent="."]
visible = false
script = ExtResource( 8 )

[node name="Godot Hub" type="RichTextLabel" parent="Home"]
margin_left = 267.0
margin_top = 10.0
margin_right = 527.0
margin_bottom = 83.0
rect_min_size = Vector2( 260, 73 )
custom_fonts/normal_font = ExtResource( 2 )
text = "Godot Hub"
fit_content_height = true
scroll_active = false

[node name="nameTxt" type="Label" parent="Home"]
margin_left = 88.0
margin_top = 100.0
margin_right = 345.0
margin_bottom = 136.0
text = "Name of new project:"

[node name="verionTxt" type="Label" parent="Home"]
margin_left = 82.0
margin_top = 154.0
margin_right = 345.0
margin_bottom = 190.0
text = "Godot Version to use:"

[node name="name" type="LineEdit" parent="Home"]
margin_left = 347.0
margin_top = 96.0
margin_right = 743.0
margin_bottom = 142.0

[node name="version" type="OptionButton" parent="Home"]
margin_left = 347.0
margin_top = 151.0
margin_right = 743.0
margin_bottom = 193.0

[node name="create" type="Button" parent="Home"]
margin_left = 88.0
margin_top = 211.0
margin_right = 252.0
margin_bottom = 253.0
text = "CREATE"

[node name="Timer" type="Timer" parent="Home"]
wait_time = 60.0
autostart = true

[node name="Installs" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Installs" type="RichTextLabel" parent="Installs"]
margin_left = 167.0
margin_top = 10.0
margin_right = 627.0
margin_bottom = 83.0
rect_min_size = Vector2( 260, 73 )
custom_fonts/normal_font = ExtResource( 2 )
text = "Install New Version"
fit_content_height = true
scroll_active = false

[node name="versionText" type="RichTextLabel" parent="Installs"]
margin_left = 128.0
margin_top = 128.0
margin_right = 232.0
margin_bottom = 168.0
text = "Version:"
fit_content_height = true
scroll_active = false

[node name="versionSelect" type="OptionButton" parent="Installs"]
margin_left = 232.0
margin_top = 127.0
margin_right = 381.0
margin_bottom = 169.0
text = "Initialising"

[node name="subversionText2" type="RichTextLabel" parent="Installs"]
margin_left = 72.0
margin_top = 192.0
margin_right = 232.0
margin_bottom = 232.0
text = "Sub Version:"
fit_content_height = true
scroll_active = false

[node name="subversionSelect2" type="OptionButton" parent="Installs"]
margin_left = 232.0
margin_top = 191.0
margin_right = 381.0
margin_bottom = 233.0
text = "Initialising"

[node name="rc" type="CheckBox" parent="Installs"]
margin_left = 72.0
margin_top = 250.0
margin_right = 329.0
margin_bottom = 294.0
pressed = true
text = "Release Candidate"

[node name="alpha" type="CheckBox" parent="Installs"]
margin_left = 72.0
margin_top = 297.0
margin_right = 329.0
margin_bottom = 341.0
pressed = true
text = "Alpha"

[node name="beta" type="CheckBox" parent="Installs"]
margin_left = 72.0
margin_top = 344.0
margin_right = 329.0
margin_bottom = 388.0
pressed = true
text = "Beta"

[node name="stable" type="CheckBox" parent="Installs"]
margin_left = 72.0
margin_top = 385.0
margin_right = 329.0
margin_bottom = 429.0
pressed = true
text = "Stable"

[node name="mono" type="CheckBox" parent="Installs"]
margin_left = 72.0
margin_top = 429.0
margin_right = 329.0
margin_bottom = 473.0
pressed = true
text = "Mono"

[node name="seperator" type="Line2D" parent="Installs"]
position = Vector2( 408, 96 )
points = PoolVector2Array( 0, 0, 0, 385 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="installedVersions" type="RichTextLabel" parent="Installs"]
margin_left = 494.0
margin_top = 95.0
margin_right = 714.0
margin_bottom = 135.0
text = "Installed Versions"

[node name="ItemList" type="ItemList" parent="Installs"]
margin_left = 437.0
margin_top = 147.0
margin_right = 768.0
margin_bottom = 419.0

[node name="installBtn" type="Button" parent="Installs"]
margin_left = 232.0
margin_top = 445.0
margin_right = 347.0
margin_bottom = 487.0
text = "INSTALL"

[node name="OPM" type="Button" parent="Installs"]
margin_left = 467.0
margin_top = 429.0
margin_right = 743.0
margin_bottom = 471.0
text = "Open Project Manager"

[node name="Settings" type="Node2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="Settings" type="RichTextLabel" parent="Settings"]
margin_left = 301.0
margin_top = 10.0
margin_right = 494.0
margin_bottom = 83.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Settings"
fit_content_height = true
scroll_active = false

[node name="bg_color_text" type="RichTextLabel" parent="Settings"]
margin_left = 88.0
margin_top = 112.0
margin_right = 308.0
margin_bottom = 152.0
text = "Background Color:"

[node name="ChooseColor" type="Button" parent="Settings"]
margin_left = 320.0
margin_top = 112.0
margin_right = 437.0
margin_bottom = 154.0
text = "Select"

[node name="CP" type="Node2D" parent="Settings"]
visible = false
position = Vector2( 464, 96 )
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="ColorPicker" type="ColorPicker" parent="Settings/CP"]
margin_left = 4.0
margin_top = 4.0
margin_right = 442.0
margin_bottom = 600.0
edit_alpha = false
presets_visible = false

[connection signal="mouse_entered" from="NavBarBg/Home" to="." method="_on_Home_mouse_entered"]
[connection signal="mouse_exited" from="NavBarBg/Home" to="." method="_on_Home_mouse_exited"]
[connection signal="pressed" from="NavBarBg/Home" to="." method="_on_Home_pressed"]
[connection signal="mouse_entered" from="NavBarBg/Installs" to="." method="_on_Installs_mouse_entered"]
[connection signal="mouse_exited" from="NavBarBg/Installs" to="." method="_on_Installs_mouse_exited"]
[connection signal="pressed" from="NavBarBg/Installs" to="." method="_on_Installs_pressed"]
[connection signal="mouse_entered" from="NavBarBg/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="NavBarBg/Settings" to="." method="_on_Settings_mouse_exited"]
[connection signal="pressed" from="NavBarBg/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Home/create" to="Home" method="_on_create_pressed"]
[connection signal="timeout" from="Home/Timer" to="Home" method="_on_Timer_timeout"]
[connection signal="item_selected" from="Installs/versionSelect" to="Installs" method="_on_versionSelect_item_selected"]
[connection signal="toggled" from="Installs/rc" to="Installs" method="_on_rc_toggled"]
[connection signal="toggled" from="Installs/alpha" to="Installs" method="_on_alpha_toggled"]
[connection signal="toggled" from="Installs/beta" to="Installs" method="_on_beta_toggled"]
[connection signal="toggled" from="Installs/stable" to="Installs" method="_on_stable_toggled"]
[connection signal="toggled" from="Installs/mono" to="Installs" method="_on_mono_toggled"]
[connection signal="pressed" from="Installs/installBtn" to="Installs" method="_on_installBtn_pressed"]
[connection signal="pressed" from="Installs/OPM" to="Installs" method="_on_OPM_pressed"]
[connection signal="pressed" from="Settings/ChooseColor" to="Settings" method="_on_ChooseColor_pressed"]
[connection signal="color_changed" from="Settings/CP/ColorPicker" to="Settings" method="_on_ColorPicker_color_changed"]
